restore stack management, fix compile fstring